force-app/main/default/objects/Account/fields/Asesor_Asignado__c.field-meta.xml
<CustomField>
    <fullName>Asesor_Asignado__c</fullName>
    <label>Asesor Asignado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>557</fullName>
            </value>
            <value>
                <fullName>402</fullName>
            </value>
            <value>
                <fullName>401</fullName>
            </value>
            <value>
                <fullName>505</fullName>
            </value>
            <value>
                <fullName>448</fullName>
            </value>
            <value>
                <fullName>523</fullName>
            </value>
            <value>
                <fullName>519</fullName>
            </value>
            <value>
                <fullName>501</fullName>
            </value>
            <value>
                <fullName>589</fullName>
            </value>
            <value>
                <fullName>435</fullName>
            </value>
            <value>
                <fullName>595</fullName>
            </value>
            <value>
                <fullName>408</fullName>
            </value>
            <value>
                <fullName>444</fullName>
            </value>
            <value>
                <fullName>465</fullName>
            </value>
            <value>
                <fullName>591</fullName>
            </value>
            <value>
                <fullName>476</fullName>
            </value>
            <value>
                <fullName>561</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>458</fullName>
            </value>
            <value>
                <fullName>472</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>504</fullName>
            </value>
            <value>
                <fullName>507</fullName>
            </value>
            <value>
                <fullName>511</fullName>
            </value>
            <value>
                <fullName>514</fullName>
            </value>
            <value>
                <fullName>524</fullName>
            </value>
            <value>
                <fullName>528</fullName>
            </value>
            <value>
                <fullName>531</fullName>
            </value>
            <value>
                <fullName>540</fullName>
            </value>
            <value>
                <fullName>541</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>