force-app/main/default/objects/Account/fields/Asociacion_Pendiente__c.field-meta.xml
<CustomField>
    <fullName>Asociacion_Pendiente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que se va a poner en true cuando desde SAP ya obtengo el codigo de cliente.</description>
    <label>Asociacion Pendiente</label>
    <type>Checkbox</type>
</CustomField>