force-app/main/default/objects/Account/fields/Asociacion_V_lida_Desde__c.field-meta.xml
<CustomField>
    <fullName>Asociacion_V_lida_Desde__c</fullName>
    <label>Asociacion Válida Desde</label>
    <length>20</length>
    <type>Text</type>
</CustomField>