force-app/main/default/objects/Account/fields/Auxiliar_Formula_Persona_Fisica__c.field-meta.xml
<CustomField>
    <fullName>Auxiliar_Formula_Persona_Fisica__c</fullName>
    <formula>IF( ISPICKVAL(Gerencia__c, &quot;107 - Personas&quot;) , &quot;X&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auxiliar Formula Persona Fisica</label>
    <type>Text</type>
</CustomField>