force-app/main/default/objects/Account/fields/Auxiliar_Identificador__c.field-meta.xml
<CustomField>
    <fullName>Auxiliar_Identificador__c</fullName>
    <formula>IF(ISBLANK(C_digo_de_cliente__c), &quot;C&quot;, &quot;U&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auxiliar Identificador</label>
    <type>Text</type>
</CustomField>