force-app/main/default/objects/Account/fields/CanalAuxiliar__c.field-meta.xml
<CustomField>
    <fullName>CanalAuxiliar__c</fullName>
    <label>CanalAuxiliar</label>
    <length>40</length>
    <type>Text</type>
</CustomField>