force-app/main/default/objects/Account/fields/Centro_de_Abastecimiento__c.field-meta.xml
<CustomField>
    <fullName>Centro_de_Abastecimiento__c</fullName>
    <label>Centro de Abastecimiento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FS00</fullName>
                <label>FS00 - Santiago Maulén</label>
            </value>
            <value>
                <fullName>FS02</fullName>
                <label>FS02 - Coquimbo</label>
            </value>
            <value>
                <fullName>FS03</fullName>
                <label>FS03 - Temuco</label>
            </value>
            <value>
                <fullName>FS04</fullName>
                <label>FS04 - Concepción</label>
            </value>
            <value>
                <fullName>FS05</fullName>
                <label>FS05 - Antofagasta</label>
            </value>
            <value>
                <fullName>FS06</fullName>
                <label>FS06 - Puerto Montt</label>
            </value>
            <value>
                <fullName>FS07</fullName>
                <label>FS07 - Iquique</label>
            </value>
            <value>
                <fullName>FS08</fullName>
                <label>FS08 - Curicó</label>
            </value>
            <value>
                <fullName>FS09</fullName>
                <label>FS09 - Calama</label>
            </value>
            <value>
                <fullName>FS10</fullName>
                <label>FS10 - Paine</label>
            </value>
            <value>
                <fullName>FS11</fullName>
                <label>FS11 - Tienda Vitacura</label>
            </value>
            <value>
                <fullName>FS12</fullName>
                <label>FS12 - Tienda Rendic</label>
            </value>
            <value>
                <fullName>FS13</fullName>
                <label>FS13 - Tienda Calama</label>
            </value>
            <value>
                <fullName>FSE1</fullName>
                <label>FSE1 - Bodegas Externas</label>
            </value>
            <value>
                <fullName>FSE2</fullName>
                <label>FSE2 - Operador Logístico &quot;Loginsa&quot;</label>
            </value>
            <value>
                <fullName>FSE3</fullName>
                <label>FSE3 - Frigorífico Icestar</label>
            </value>
            <value>
                <fullName>FSEX</fullName>
                <label>FSEX - FS Express</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>