force-app/main/default/objects/Account/fields/CentroAuxiliar__c.field-meta.xml
<CustomField>
    <fullName>CentroAuxiliar__c</fullName>
    <label>CentroAuxiliar</label>
    <length>40</length>
    <type>Text</type>
</CustomField>