force-app/main/default/objects/Account/fields/ClienteDespachoAsTrue__c.field-meta.xml
<CustomField>
    <fullName>ClienteDespachoAsTrue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ClienteDespachoAsTrue</label>
    <type>Checkbox</type>
</CustomField>