force-app/main/default/objects/Account/fields/Codigo_del_asesor__c.field-meta.xml
<CustomField>
    <fullName>Codigo_del_asesor__c</fullName>
    <formula>Owner.Id_SAP_Usuario__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codigo del Asesor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>