force-app/main/default/objects/Account/fields/Codigo_ejecutivo__c.field-meta.xml
<CustomField>
    <fullName>Codigo_ejecutivo__c</fullName>
    <label>Codigo ejecutivo</label>
    <type>TextArea</type>
</CustomField>