force-app/main/default/objects/Account/fields/Codigo_Ramo__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Ramo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Codigo Ramo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Holding, Negocio</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Codigo_Ramo__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>