force-app/main/default/objects/Account/fields/CodigoDeClienteAsTrue__c.field-meta.xml
<CustomField>
    <fullName>CodigoDeClienteAsTrue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CodigoDeClienteAsTrue</label>
    <type>Checkbox</type>
</CustomField>