force-app/main/default/objects/Account/fields/Comuna__c.field-meta.xml
<CustomField>
    <fullName>Comuna__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comuna</label>
    <referenceTo>Comuna__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>