force-app/main/default/objects/Account/fields/Comuna_Despacho__c.field-meta.xml
<CustomField>
    <fullName>Comuna_Despacho__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comuna Despacho</label>
    <referenceTo>Comuna__c</referenceTo>
    <relationshipLabel>Accounts (Comuna Despacho)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>