force-app/main/default/objects/Account/fields/Comuna_Despacho_Nombre_Integracion__c.field-meta.xml
<CustomField>
    <fullName>Comuna_Despacho_Nombre_Integracion__c</fullName>
    <label>Comuna Despacho Nombre Integracion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>