force-app/main/default/objects/Account/fields/Comuna_Facturaci_n__c.field-meta.xml
<CustomField>
    <fullName>Comuna_Facturaci_n__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Comuna Facturación</label>
    <referenceTo>Comuna__c</referenceTo>
    <relationshipLabel>Accounts (Comuna Facturación)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>