force-app/main/default/objects/Account/fields/Condicion_de_Credito__c.field-meta.xml
<CustomField>
    <fullName>Condicion_de_Credito__c</fullName>
    <label>Condición de credito</label>
    <length>35</length>
    <type>Text</type>
</CustomField>