force-app/main/default/objects/Account/fields/CorreoBienvenida__c.field-meta.xml
<CustomField>
    <fullName>CorreoBienvenida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Correo Bienvenida Enviado</label>
    <type>Checkbox</type>
</CustomField>