force-app/main/default/objects/Account/fields/Cr_dito_disponible__c.field-meta.xml
<CustomField>
    <fullName>Cr_dito_disponible__c</fullName>
    <label>Crédito Usado</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>