force-app/main/default/objects/Account/fields/Credito_Bloqueado__c.field-meta.xml
<CustomField>
    <fullName>Credito_Bloqueado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credito Bloqueado</label>
    <type>Checkbox</type>
</CustomField>