force-app/main/default/objects/Account/fields/Datos_Completos__c.field-meta.xml
<CustomField>
    <fullName>Datos_Completos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Datos Completos</label>
    <type>Checkbox</type>
</CustomField>