force-app/main/default/objects/Account/fields/Datos_de_Contacto_de_Pagos__c.field-meta.xml
<CustomField>
    <fullName>Datos_de_Contacto_de_Pagos__c</fullName>
    <label>Datos de Contacto de Pagos</label>
    <length>35</length>
    <type>Text</type>
</CustomField>