force-app/main/default/objects/Account/fields/Datos_de_Contacto_Principal__c.field-meta.xml
<CustomField>
    <fullName>Datos_de_Contacto_Principal__c</fullName>
    <label>Datos de Contacto Principal</label>
    <length>35</length>
    <type>Text</type>
</CustomField>