force-app/main/default/objects/Account/fields/Envio_a_Sap_Timestap__c.field-meta.xml
<CustomField>
    <fullName>Envio_a_Sap_Timestap__c</fullName>
    <label>Envio a Sap Timestap</label>
    <type>DateTime</type>
</CustomField>