force-app/main/default/objects/Account/fields/EspecialidadAuxiliar__c.field-meta.xml
<CustomField>
    <fullName>EspecialidadAuxiliar__c</fullName>
    <label>EspecialidadAuxiliar</label>
    <length>40</length>
    <type>Text</type>
</CustomField>