force-app/main/default/objects/Account/fields/Fecha_de_Ultima_Visita__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Ultima_Visita__c</fullName>
    <description>Indica la fecha de la ultima visita realizada</description>
    <label>Fecha de Ultima Visita</label>
    <type>Date</type>
</CustomField>