force-app/main/default/objects/Account/fields/Fecha_Rechazo_Aumento_cr_dito__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Rechazo_Aumento_cr_dito__c</fullName>
    <label>Fecha  Rechazo Aumento crédito</label>
    <type>Date</type>
</CustomField>