force-app/main/default/objects/Account/fields/Gerencia__c.field-meta.xml
<CustomField>
    <fullName>Gerencia__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>102 - Cadenas</fullName>
            </value>
            <value>
                <fullName>103 - Catering</fullName>
            </value>
            <value>
                <fullName>105 - Institucional</fullName>
            </value>
            <value>
                <fullName>106 - Mayorista</fullName>
            </value>
            <value>
                <fullName>107 - Personas</fullName>
            </value>
            <value>
                <fullName>112 - Industria</fullName>
            </value>
            <value>
                <fullName>113 - Otros</fullName>
            </value>
            <value>
                <fullName>115 - Punto a Punto</fullName>
            </value>
            <value>
                <fullName>116 - Cliente Hogar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>