force-app/main/default/objects/Account/fields/Grupo_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Grupo_Cliente__c</fullName>
    <label>Grupo Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grupo 1</fullName>
            </value>
            <value>
                <fullName>Grupo 2</fullName>
            </value>
            <value>
                <fullName>Grupo 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>