force-app/main/default/objects/Account/fields/Horario_de_Recepcion_Max__c.field-meta.xml
<CustomField>
    <fullName>Horario_de_Recepcion_Max__c</fullName>
    <defaultValue>TIMEVALUE(&quot;18:00:00.000&quot;)</defaultValue>
    <inlineHelpText>Elija una banda horaria de al menos 5 horas</inlineHelpText>
    <label>Horario de Recepción Max</label>
    <type>Time</type>
</CustomField>