force-app/main/default/objects/Account/fields/IsNullCodigo__c.field-meta.xml
<CustomField>
    <fullName>IsNullCodigo__c</fullName>
    <description>Campo auxiliar para verificar si Status Juridico tiene valores o no.</description>
    <formula>OR (ISPICKVAL(Status_Jur_dico__c,&quot;&quot;), ISBLANK(Codigo_Ramo__c))</formula>
    <label>IsNullCodigo</label>
    <type>Checkbox</type>
</CustomField>