force-app/main/default/objects/Account/fields/largo_telefono__c.field-meta.xml
<CustomField>
    <fullName>largo_telefono__c</fullName>
    <formula>LEN(Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>largo telefono</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>