force-app/main/default/objects/Account/fields/Limite_Credito__c.field-meta.xml
<CustomField>
    <fullName>Limite_Credito__c</fullName>
    <label>Limite de Credito</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>