force-app/main/default/objects/Account/fields/Negocio_Gastronomico__c.field-meta.xml
<CustomField>
    <fullName>Negocio_Gastronomico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>No usar, esta relacionado al lead personalizado</description>
    <label>Negocio Gastronomico</label>
    <referenceTo>Negocio_Gastronomico__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>