force-app/main/default/objects/Account/fields/Nombre_de_contacto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_contacto__c</fullName>
    <label>Nombre de contacto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>