force-app/main/default/objects/Account/fields/Observaciones_del_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_del_Cliente__c</fullName>
    <label>Observaciones del Cliente</label>
    <length>150</length>
    <type>Text</type>
</CustomField>