force-app/main/default/objects/Account/fields/Oficina_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Oficina_de_Venta__c</fullName>
    <label>Oficina de Venta</label>
    <length>35</length>
    <type>Text</type>
</CustomField>