force-app/main/default/objects/Account/fields/Prior_Parent__c.field-meta.xml
<CustomField>
    <fullName>Prior_Parent__c</fullName>
    <description>Almacena el valor del Codigo de Cliente SAP anterior, para poder ser evaluado en el Flow que asocia/desasocia Facturador y Holding.</description>
    <label>Prior Parent</label>
    <length>20</length>
    <type>Text</type>
</CustomField>