force-app/main/default/objects/Account/fields/Proximos_Pasos__c.field-meta.xml
<CustomField>
    <fullName>Proximos_Pasos__c</fullName>
    <label>Proximos Pasos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>