force-app/main/default/objects/Account/fields/Razon_Social__c.field-meta.xml
<CustomField>
    <fullName>Razon_Social__c</fullName>
    <label>Razon Social</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Responsable Inscripto</fullName>
            </value>
            <value>
                <fullName>Excento</fullName>
            </value>
            <value>
                <fullName>Consumidor Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>