force-app/main/default/objects/Account/fields/RegionDespachoAuxiliar__c.field-meta.xml
<CustomField>
    <fullName>RegionDespachoAuxiliar__c</fullName>
    <label>RegionDespachoAuxiliar</label>
    <length>40</length>
    <type>Text</type>
</CustomField>