force-app/main/default/objects/Account/fields/RegionFacturaci_nAuxiliar__c.field-meta.xml
<CustomField>
    <fullName>RegionFacturaci_nAuxiliar__c</fullName>
    <label>RegionFacturaciónAuxiliar</label>
    <length>40</length>
    <type>Text</type>
</CustomField>