force-app/main/default/objects/Account/fields/RegistroTipo__c.field-meta.xml
<CustomField>
    <fullName>RegistroTipo__c</fullName>
    <formula>RUT__c &amp; &quot;-&quot; &amp; RecordType.Name</formula>
    <label>RegistroTipo</label>
    <type>Text</type>
</CustomField>