force-app/main/default/objects/Account/fields/Respuesta_SAP__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_SAP__c</fullName>
    <label>Respuesta SAP</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>