force-app/main/default/objects/Account/fields/Rut_igual_a_rut_Lead__c.field-meta.xml
<CustomField>
    <fullName>Rut_igual_a_rut_Lead__c</fullName>
    <formula>RUT__c =  Negocio_Gastronomico__r.RUT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rut igual a rut Lead</label>
    <type>Checkbox</type>
</CustomField>