force-app/main/default/objects/Account/fields/Status_Jur_dico__c.field-meta.xml
<CustomField>
    <fullName>Status_Jur_dico__c</fullName>
    <label>Status Jurídico</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01 - Persona Natural</fullName>
            </value>
            <value>
                <fullName>02 - Asociación</fullName>
            </value>
            <value>
                <fullName>03 - Cta en participación</fullName>
            </value>
            <value>
                <fullName>04 - Aparcerías</fullName>
            </value>
            <value>
                <fullName>05 - Sociedad Colectiva</fullName>
            </value>
            <value>
                <fullName>06 - Sociedad Limitada</fullName>
            </value>
            <value>
                <fullName>07 - Comand. Simple</fullName>
            </value>
            <value>
                <fullName>08 - Comand. Acciones</fullName>
            </value>
            <value>
                <fullName>09 - Sociedad Anónima</fullName>
            </value>
            <value>
                <fullName>10 - Cooperativa</fullName>
            </value>
            <value>
                <fullName>11 - Contractual Minera</fullName>
            </value>
            <value>
                <fullName>12 - Persona Jurídica</fullName>
            </value>
            <value>
                <fullName>13 - E.I.R.L.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>