force-app/main/default/objects/Account/fields/SucursalAuxiliar__c.field-meta.xml
<CustomField>
    <fullName>SucursalAuxiliar__c</fullName>
    <label>SucursalAuxiliar</label>
    <length>40</length>
    <type>Text</type>
</CustomField>