force-app/main/default/objects/Account/fields/Tel_fono_de_Contacto_de_Pagos__c.field-meta.xml
<CustomField>
    <fullName>Tel_fono_de_Contacto_de_Pagos__c</fullName>
    <label>Teléfono de Contacto de Pagos</label>
    <type>Phone</type>
</CustomField>