force-app/main/default/objects/Account/fields/Tel_fono_de_contacto_principal__c.field-meta.xml
<CustomField>
    <fullName>Tel_fono_de_contacto_principal__c</fullName>
    <label>Teléfono de contacto principal</label>
    <type>Phone</type>
</CustomField>