force-app/main/default/objects/Account/fields/Tipificaci_n_de_Origen__c.field-meta.xml
<CustomField>
    <fullName>Tipificaci_n_de_Origen__c</fullName>
    <label>Tipificaciòn de Origen</label>
    <type>TextArea</type>
</CustomField>