force-app/main/default/objects/Account/fields/Ventas_3_meses__c.field-meta.xml
<CustomField>
    <fullName>Ventas_3_meses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ventas 3 meses</label>
    <type>Checkbox</type>
</CustomField>