force-app/main/default/objects/Account/recordTypes/Eliminar.recordType-meta.xml
<RecordType>
    <fullName>Eliminar</fullName>
    <active>true</active>
    <description>No usar</description>
    <label>N/A</label>
</RecordType>