force-app/main/default/objects/Account/recordTypes/Holding.recordType-meta.xml
<RecordType>
    <fullName>Holding</fullName>
    <active>true</active>
    <label>Holding</label>
</RecordType>