force-app/main/default/objects/Account/recordTypes/Negocio.recordType-meta.xml
<RecordType>
    <fullName>Negocio</fullName>
    <active>true</active>
    <label>Negocio</label>
</RecordType>