force-app/main/default/objects/Account/validationRules/BloqueoCamposDireccion.validationRule-meta.xml
<ValidationRule>
    <fullName>BloqueoCamposDireccion</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
    (ISNULL(TEXT(Region_Despacho__c)) || ISNULL(Comuna__c) || ISNULL(TEXT(Region__c)) || ISNULL(Comuna_Facturaci_n__c))
)</errorConditionFormula>
    <errorMessage>La comuna y la región debe estar completa</errorMessage>
</ValidationRule>