force-app/main/default/objects/Account/validationRules/ControlDuplicidadDeRut.validationRule-meta.xml
<ValidationRule>
    <fullName>ControlDuplicidadDeRut</fullName>
    <active>false</active>
    <errorConditionFormula>RUT__c = Negocio_Gastronomico__r.RUT__c &amp;&amp;  Name  = Negocio_Gastronomico__r.Raz_n_Social__c</errorConditionFormula>
    <errorMessage>Rut Duplicado, por favor revisar los clientes ya creados.</errorMessage>
</ValidationRule>