force-app/main/default/objects/Account/validationRules/Es_parte_de_Holding_y_parent_acc.validationRule-meta.xml
<ValidationRule>
    <fullName>Es_parte_de_Holding_y_parent_acc</fullName>
    <active>false</active>
    <description>Si es parte de holding pedir un parent account</description>
    <errorConditionFormula>AND(
   Es_Parte_de_un_Holding__c  = TRUE,
  ISBLANK( Parent.Name )
)</errorConditionFormula>
    <errorDisplayField>ParentId</errorDisplayField>
    <errorMessage>Por favor completar el campo Parent Account</errorMessage>
</ValidationRule>